--- a/package.json
+++ b/package.json
@@ -4,5 +4,16 @@
   "description": "Simple web components",
   "main": "index.js",
   "author": "David Linke",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chokidar": "^3.5.2",
+    "html-minifier": "^4.0.0",
+    "live-server": "^1.2.1",
+    "node-sass": "^6.0.0",
+    "sass": "^1.35.1",
+    "terser": "^5.7.0"
+  },
+  "scripts": {
+    "start": "node index.js"
+  }
 }
