--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "David Linke",
   "license": "MIT",
   "devDependencies": {
+    "browser-sync": "^2.26.14",
     "chokidar": "^3.5.2",
     "html-minifier": "^4.0.0",
     "live-server": "^1.2.1",
