--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "chokidar": "^3.5.2",
     "eslint": "^8.15.0",
     "html-minifier": "^4.0.0",
+    "jsdoc": "^3.6.10",
     "node-sass": "^7.0.1",
     "sass": "^1.51.0",
     "terser": "^5.13.1"
   },
   "scripts": {
-    "start": "node node-scripts/index.js"
+    "start": "node node-scripts/index.js",
+    "doc": "jsdoc -c jsdoc.json"
   }
 }
